Adding in API models for the required attributes for a call. So SendInvite only requires the email address.
