# pkg/server/api_identities.go
@@ -1,7 +1,7 @@
 /*
  * Moov Identity API
  *
- * Handles all identities for tracking the users of the Moov platform. 
+ * Handles all identities for tracking the users of the Moov platform.
  *
  * API version: 0.0.1
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
@@ -24,12 +24,12 @@ type IdentitiesApiController struct {
 
 // NewIdentitiesApiController creates a default api controller
 func NewIdentitiesApiController(s IdentitiesApiServicer) Router {
-	return &IdentitiesApiController{ service: s }
+	return &IdentitiesApiController{service: s}
 }
 
 // Routes returns all of the api route for the IdentitiesApiController
 func (c *IdentitiesApiController) Routes() Routes {
-	return Routes{ 
+	return Routes{
 		{
 			"DisableIdentity",
 			strings.ToUpper("Delete"),
@@ -58,7 +58,7 @@ func (c *IdentitiesApiController) Routes() Routes {
 }
 
 // DisableIdentity - Disable an identity. Its left around for historical reporting
-func (c *IdentitiesApiController) DisableIdentity(w http.ResponseWriter, r *http.Request) { 
+func (c *IdentitiesApiController) DisableIdentity(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
 	identityID := params["identityID"]
 	result, err := c.service.DisableIdentity(identityID)
@@ -66,12 +66,12 @@ func (c *IdentitiesApiController) DisableIdentity(w http.ResponseWriter, r *http
 		w.WriteHeader(500)
 		return
 	}
-	
+
 	EncodeJSONResponse(result, nil, w)
 }
 
 // GetIdentity - List identities and associates userId
-func (c *IdentitiesApiController) GetIdentity(w http.ResponseWriter, r *http.Request) { 
+func (c *IdentitiesApiController) GetIdentity(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
 	identityID := params["identityID"]
 	result, err := c.service.GetIdentity(identityID)
@@ -79,12 +79,12 @@ func (c *IdentitiesApiController) GetIdentity(w http.ResponseWriter, r *http.Req
 		w.WriteHeader(500)
 		return
 	}
-	
+
 	EncodeJSONResponse(result, nil, w)
 }
 
 // ListIdentities - List identities and associates userId
-func (c *IdentitiesApiController) ListIdentities(w http.ResponseWriter, r *http.Request) { 
+func (c *IdentitiesApiController) ListIdentities(w http.ResponseWriter, r *http.Request) {
 	query := r.URL.Query()
 	orgID := query.Get("orgID")
 	result, err := c.service.ListIdentities(orgID)
@@ -92,25 +92,25 @@ func (c *IdentitiesApiController) ListIdentities(w http.ResponseWriter, r *http.
 		w.WriteHeader(500)
 		return
 	}
-	
+
 	EncodeJSONResponse(result, nil, w)
 }
 
 // UpdateIdentity - Update a specific Identity
-func (c *IdentitiesApiController) UpdateIdentity(w http.ResponseWriter, r *http.Request) { 
+func (c *IdentitiesApiController) UpdateIdentity(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
 	identityID := params["identityID"]
-	identity := &Identity{}
+	identity := &UpdateIdentity{}
 	if err := json.NewDecoder(r.Body).Decode(&identity); err != nil {
 		w.WriteHeader(500)
 		return
 	}
-	
+
 	result, err := c.service.UpdateIdentity(identityID, *identity)
 	if err != nil {
 		w.WriteHeader(500)
 		return
 	}
-	
+
 	EncodeJSONResponse(result, nil, w)
 }
