# pkg/server/model_update_identity.go
@@ -1,0 +1,32 @@
+/*
+ * Moov Identity API
+ *
+ * Handles all identities for tracking the users of the Moov platform. 
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package identityserver
+
+// UpdateIdentity - Properties of an Identity. These users will under-go KYC checks thus all the information 
+type UpdateIdentity struct {
+
+	FirstName string `json:"firstName"`
+
+	MiddleName string `json:"middleName,omitempty"`
+
+	LastName string `json:"lastName"`
+
+	NickName *string `json:"nickName,omitempty"`
+
+	Suffix *string `json:"suffix,omitempty"`
+
+	BirthDate string `json:"birthDate,omitempty"`
+
+	Status string `json:"status,omitempty"`
+
+	Phones []Phone `json:"phones,omitempty"`
+
+	Addresses []Address `json:"addresses,omitempty"`
+}
